--- a/Exercise4/WebRoot/css/userManage.css
+++ b/Exercise4/WebRoot/css/userManage.css
@@ -147,3 +147,28 @@ div.pageSize{
 div.pageNav{
 	float: right;
 }
+
+/*弹出层*/
+.black_overlay {
+    display: none;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(187, 184, 184);
+    z-index: 1001;
+    -moz-opacity: 0.7;
+    opacity: 0.7;
+}
+
+.white_content {
+    display: none;
+    position: absolute;
+    width: 390px;
+    border: 6px solid lightblue;
+    background-color: white;
+    z-index: 1002;
+    overflow: auto;
+	border-radius:12px;
+}
